--- a/ttf-junicode/trunk/PKGBUILD
+++ b/ttf-junicode/trunk/PKGBUILD
@@ -3,25 +3,22 @@
 
 pkgname=ttf-junicode
 pkgver=0.6.17
-_realver=0-6-17
-pkgrel=1
+pkgrel=2
 pkgdesc="Junius-Unicode: a Unicode font targeted at medievalists"
 arch=(any)
 license=('GPL2')
 url="http://junicode.sourceforge.net"
-depends=("xorg-fonts-encodings" "xorg-fonts-alias" "xorg-font-utils" "fontconfig")
-makedepends=(unzip)
-options=(docs)
+depends=(xorg-fonts-encodings xorg-fonts-alias xorg-font-utils fontconfig)
 install=ttf.install
-source=("http://downloads.sourceforge.net/sourceforge/junicode/junicode-${_realver}.zip")
+source=("http://downloads.sourceforge.net/sourceforge/junicode/junicode-${pkgver//\./-}.zip")
 md5sums=('bef365de1c2601e25f36ccef4ead744a')
 
 build() {
-  cd $srcdir/junicode
-  mkdir -p $pkgdir/usr/share/fonts/TTF
-  mkdir -p $pkgdir/usr/share/doc/$pkgname
-  install -m644 fonts/*.ttf $pkgdir/usr/share/fonts/TTF
-  install -m644 doc/* $pkgdir/usr/share/doc/$pkgname
-  rm -f $pkgdir/usr/share/doc/$pkgname/License*
-}
+  cd "${srcdir}/junicode"
+  install -m755 -d "${pkgdir}/usr/share/fonts/TTF"
+  install -m755 -d "${pkgdir}/usr/share/doc/${pkgname}"
 
+  install -m644 fonts/*.ttf "${pkgdir}/usr/share/fonts/TTF/" || return 1
+  install -m644 doc/* "${pkgdir}/usr/share/doc/${pkgname}/" || return 1
+  rm -f "${pkgdir}"/usr/share/doc/${pkgname}/License*
+}
