--- a/lucene/trunk/PKGBUILD
+++ b/lucene/trunk/PKGBUILD
@@ -3,15 +3,16 @@
 # Contributor: Andy Roberts (arooaroo) <dev@andy-roberts.net>
 
 pkgname=lucene
-pkgver=3.0.0
+pkgver=2.9.2 # don't update to 3.x tree - OOo is not yet ready to use it
 pkgrel=1
 arch=('any')
 pkgdesc="A high-performance, full-featured text search engine library written entirely in Java"
 url="http://lucene.apache.org/java/docs/index.html"
 license="APACHE"
 depends=('java-runtime')
+options=('force')
 source=(http://www.mirrorservice.org/sites/ftp.apache.org/lucene/java/lucene-${pkgver}.tar.gz)
-md5sums=('052b8809287a652cb2f8a413ec76a8ea')
+md5sums=('b85aa876d20fcbccada1151c4fc76187')
 
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
