--- a/tzdata/trunk/PKGBUILD
+++ b/tzdata/trunk/PKGBUILD
@@ -2,10 +2,10 @@
 # Maintainer: Andreas Radke <andyrtr@archlinux.org>
 
 pkgname=tzdata
-pkgver=2010b
+pkgver=2010e
 pkgrel=1
-_tzcode=2009t
-_tzdata=2010b
+_tzcode=2010c
+_tzdata=2010e
 pkgdesc="Sources for time zone and daylight saving time data"
 arch=('i686' 'x86_64')
 url="http://www.twinsun.com/tz/tz-link.htm"
@@ -17,8 +17,8 @@ options=('!emptydirs')
 source=(ftp://elsie.nci.nih.gov/pub/tzcode${_tzcode}.tar.gz \
         ftp://elsie.nci.nih.gov/pub/${pkgname}${_tzdata}.tar.gz \
         Makefile.patch)
-md5sums=('17fe1e12237b11d490f62dcec4b4bc11'
-         'dfd29a56cb39cc8c57b0939608a054f6'
+md5sums=('a3021ce84b46bf57627dade2451949b6'
+         '8e179c56fd18c0f85dfa4ac4bf828b42'
          'a64ed97d1fc03c66ee8612c0d9f40507')
 
 build() {
