--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Sergej Pupykin <sergej@aur.archlinux.org>
 
 pkgname=man-db
-pkgver=2.5.6
+pkgver=2.5.7
 pkgrel=1
 pkgdesc="A utility for reading man pages"
 arch=('i686' 'x86_64')
@@ -12,18 +12,19 @@ license=('GPL' 'LGPL')
 groups=('base')
 depends=( 'bash' 'gdbm' 'zlib' 'groff')
 optdepends=('less' 'gzip')
-backup=(etc/man_db.conf)
+backup=('etc/man_db.conf'
+	'etc/cron.daily/man-db')
 conflicts=('man')
 provides=('man')
 replaces=('man')
 install=${pkgname}.install
-source=(#http://savannah.nongnu.org/download/man-db/$pkgname-$pkgver.tar.gz
-	http://launchpad.net/man-db/main/${pkgver}/+download/${pkgname}-${pkgver}.tar.gz
+source=(http://savannah.nongnu.org/download/man-db/$pkgname-$pkgver.tar.gz
+	#http://launchpad.net/man-db/main/${pkgver}/+download/${pkgname}-${pkgver}.tar.gz
         convert-mans man-db.cron.daily)
-md5sums=('69585b19c5600a863f1a0d7b7f283975'
+md5sums=('eef0d8c8e54894e4e050e2176bb1d88d'
          '2b7662a7d5b33fe91f9f3e034361a2f6'
-         'acdff891e224511cf26c92de77347db8')
-                                  
+         'd30c39ae47560304471b5461719e0f03')
+                        
 build() {
   cd ${srcdir}/${pkgname}-${pkgver}
   
