--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=xorg-server
 pkgver=1.7.5.901
-pkgrel=1
+pkgrel=2
 pkgdesc="X.Org X servers"
 arch=('i686' 'x86_64')
 license=('custom')
@@ -21,16 +21,22 @@ source=(${url}/releases/individual/xserver/${pkgname}-${pkgver}.tar.bz2
         xserver-1.7.1-libcrypto.patch
         xserver-1.7.1-gamma-kdm-fix.patch
         xvfb-run
-        xvfb-run.1)
+        xvfb-run.1
+        revert-351d11fd.patch)
 md5sums=('d436ce2f2239c196ee163c7c047c1dd2'
          '1a336eb22e27cbf443ec5a2ecddfa93c'
          '957d429cad03ac87281b7e40d963497c'
          '8eae23916552e609c36ecae1827c2e9d'
          '52fd3effd80d7bc6c1660d4ecf23d31c'
-         '376c70308715cd2643f7bff936d9934b')
+         '376c70308715cd2643f7bff936d9934b'
+         '228fde17e31440bea7295bbcbf9edf9e')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
+
+  # Temporaly revert this, avoid break fluxbox
+  patch -Rp1 -i "${srcdir}/revert-351d11fd.patch" || return 1
+
   # Get rid of the ugly pattern
   patch -Np3 -i "${srcdir}/xorg-redhat-die-ugly-pattern-die-die-die.patch" || return  1
 
