--- a/foomatic/trunk/PKGBUILD
+++ b/foomatic/trunk/PKGBUILD
@@ -4,21 +4,20 @@
 pkgbase="foomatic"
 pkgname=('foomatic-db' 'foomatic-filters' 'foomatic-db-engine' 'foomatic-db-nonfree')
 arch=('i686' 'x86_64') # needs to be changed  in the subpackages when makepkg will support it
-_snapdate=20090904
-_relver=4.0.3
+_snapdate=20100218
+_relver=4.0.4
 pkgver=${_relver}_${_snapdate}
-pkgrel=2
-makedepends=('cups>=1.4.0' 'perl' 'libxml2' 'enscript' 'ghostscript>=8.70-2' 'perl' 'net-snmp'
-            'bash')
+pkgrel=1
+makedepends=('cups>=1.4.2' 'perl' 'libxml2' 'enscript' 'perl' 'net-snmp' 'bash')
 source=(http://www.linuxprinting.org/download/foomatic/$pkgbase-{filters,db-engine}-${_relver}.tar.gz
         http://www.linuxprinting.org/download/foomatic/$pkgbase-db-4.0-${_snapdate}.tar.gz
         http://www.linuxprinting.org/download/foomatic/$pkgbase-db-nonfree-${_snapdate}.tar.gz)
 url="http://www.linuxprinting.org/foomatic.html"
 options=('force')
-md5sums=('f2fb7c48cc6b1af6f76dd0529d6dbd98'
-         'fdb02175cc857f63bb06b25ac3b1658b'
-         '67a48acf1647c4df0a77d15968718a1c'
-         '94b072179cc97fe76ba31aed873e59c9')
+md5sums=('f67fc793ee8d4d076c6671d6e6a72367'
+         '675999e0ab8d59ad34a805c378830354'
+         '88e4498390ad82ff13f8c7f43520e786'
+         'eb82108c1479b292de2b1e077dc3b0a3')
 
 build() {
  /bin/true
@@ -46,7 +45,7 @@ package_foomatic-filters() {
 # arch=('i686' 'x86_64')
  license=('GPL')
  backup=(etc/foomatic/filter.conf)
- depends=('ghostscript>=8.70-2')
+ depends=('glibc')
  optdepends=('perl:      for the "beh" Backend End Handler used by cups'
             'net-snmp:  certain (mostly HP) printers need it to work')
 
@@ -62,7 +61,7 @@ package_foomatic-db-engine() {
  pkgdesc="Foomatic - Foomatic's database engine generates PPD files from the data in Foomatic's XML database. It also contains scripts to directly generate print queues and handle jobs."
 # arch=(i686 x86_64)
  license=('GPL')
- depends=('perl' 'libxml2' 'foomatic-filters>=$pkgver' 'bash')
+ depends=('perl' 'libxml2' 'foomatic-filters' 'bash')
 
 #   cd ${srcdir}/${pkgname}-${pkgver}
    cd ${srcdir}/foomatic-db-engine-${_relver}
@@ -83,7 +82,7 @@ package_foomatic-db-nonfree() {
  pkgdesc="Foomatic - database extension consisting of manufacturer-supplied PPD files released under non-free licenses"
 # arch=('any')
  license=('custom')
- depends=('perl' 'libxml2' "foomatic-db-engine>=4.0.3" 'foomatic-db')
+ depends=('perl' 'libxml2' "foomatic-db-engine" 'foomatic-db')
 
 #   cd ${srcdir}/${pkgname}-${_snapdate}
    cd ${srcdir}/foomatic-db-nonfree-${_snapdate}
