--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,15 +4,15 @@
 
 pkgname=geeqie
 pkgver=1.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A lightweight image browser and viewer (fork of GQview)"
 arch=('i686' 'x86_64')
 url="http://geeqie.sourceforge.net/"
 license=('GPL3')
-depends=('exiv2>=0.18' 'gtk2' 'lcms')
+depends=('exiv2' 'gtk2' 'lcms')
 makedepends=('intltool')
 replaces=('gqview-devel')
-source=(http://downloads.sourceforge.net/sourceforge/geeqie/${pkgname}-${pkgver}.tar.gz)
+source=(http://downloads.sourceforge.net/${pkgname}/${pkgname}-${pkgver}.tar.gz)
 md5sums=('1d67ef990390224c5052697d93bb49c0')
 sha1sums=('8494a557d67d20e6ad720645ec789dd2b33a3266')
 
@@ -20,5 +20,9 @@ build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
   CPPFLAGS="-D_FILE_OFFSET_BITS=64" ./configure --prefix=/usr || return 1
   make || return 1
+}
+
+package(){
+  cd ${srcdir}/${pkgname}-${pkgver}
   make DESTDIR="${pkgdir}" install || return 1
 }
