--- a/gstreamer0.10-ugly/trunk/PKGBUILD
+++ b/gstreamer0.10-ugly/trunk/PKGBUILD
@@ -3,21 +3,19 @@
 
 pkgbase=gstreamer0.10-ugly
 pkgname=('gstreamer0.10-ugly' 'gstreamer0.10-ugly-plugins')
-pkgver=0.10.13
-pkgrel=4
-arch=(i686 x86_64)
+pkgver=0.10.14
+pkgrel=1
+arch=('i686' 'x86_64')
 license=('LGPL')
-makedepends=('pkgconfig' 'gstreamer0.10-base>=0.10.25' 'libdvdread>=4.1.3' 'lame>=3.98.2' 'libmpeg2>=0.5.1' 'a52dec>=0.7.4' 'libid3tag>=0.15.1b' 'libmad>=0.15.1b' 'libsidplay>=1.36.59' 'libcdio>=0.82' 'x264>=20100207')
+makedepends=('pkgconfig' 'gstreamer0.10-base>=0.10.28' 'libdvdread>=4.1.3' 'lame>=3.98.2' 'libmpeg2>=0.5.1' 'a52dec>=0.7.4' 'libid3tag>=0.15.1b' 'libmad>=0.15.1b' 'libsidplay>=1.36.59' 'libcdio>=0.82' 'x264>=20100207')
 url="http://gstreamer.freedesktop.org/"
 options=(!libtool)
-source=(${url}/src/gst-plugins-ugly/gst-plugins-ugly-${pkgver}.tar.bz2
-	fix_compilatin_x264.patch)
-md5sums=('1619365247ef9cd7da1cd890285bf87a'
-         '5efe376271287669a8525871307c5ddf')
+source=(${url}/src/gst-plugins-ugly/gst-plugins-ugly-${pkgver}.tar.bz2)
+
+sha256sums=('78dba9963e130cfd09f294b60219e6562459c5d848bc3b38a653db7f21fc850b')
 
 build() {
   cd "${srcdir}/gst-plugins-ugly-${pkgver}"
-  patch -Np1 -i ${srcdir}/fix_compilatin_x264.patch || return 1
 
   ./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var \
     --disable-static --enable-experimental \
@@ -30,7 +28,7 @@ build() {
 
 package_gstreamer0.10-ugly() {
   pkgdesc="GStreamer Multimedia Framework Ugly plugin libraries"
-  depends=('gstreamer0.10-base>=0.10.25')
+  depends=('gstreamer0.10-base>=0.10.28')
   
   cd "${srcdir}/gst-plugins-ugly-${pkgver}"
   make DESTDIR="${pkgdir}" install || return 1
