--- a/laptop-mode-tools/trunk/PKGBUILD
+++ b/laptop-mode-tools/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Christopher "nuopus" Cox <nuopus@gmail.com>
 
 pkgname=laptop-mode-tools
-pkgver=1.53
+pkgver=1.54
 pkgrel=1
 pkgdesc="Laptop mode is a kernel mode that allows you to extend the battery life of your laptop"
 arch=('any')
@@ -20,11 +20,13 @@ backup=(etc/laptop-mode/conf.d/ac97-powersave.conf
         etc/laptop-mode/conf.d/dpms-standby.conf
         etc/laptop-mode/conf.d/eee-superhe.conf
         etc/laptop-mode/conf.d/ethernet.conf
+        etc/laptop-mode/conf.d/exec-commands.conf
 	etc/laptop-mode/conf.d/hal-polling.conf
         etc/laptop-mode/conf.d/intel-hda-powersave.conf
 	etc/laptop-mode/conf.d/intel-sata-powermgmt.conf
         etc/laptop-mode/conf.d/lcd-brightness.conf
 	etc/laptop-mode/conf.d/sched-mc-power-savings.conf
+        etc/laptop-mode/conf.d/sched-smt-power-savings.conf
         etc/laptop-mode/conf.d/start-stop-programs.conf
         etc/laptop-mode/conf.d/terminal-blanking.conf
         etc/laptop-mode/conf.d/usb-autosuspend.conf
@@ -34,12 +36,11 @@ backup=(etc/laptop-mode/conf.d/ac97-powersave.conf
         etc/laptop-mode/laptop-mode.conf
         etc/laptop-mode/lm-profiler.conf)
 source=(http://www.samwel.tk/laptop_mode/tools/downloads/${pkgname}_${pkgver}.tar.gz laptop-mode)
-md5sums=('38c2bc57ca58055c3f42318dbaa9a3f6' 'fe47441f14e2b39c2fe473685f04395f')
-sha1sums=('5ffea012c56a0717735f3e37ac235e010847e1e7' 'f98e3c35d365c7aa0e662ec61c2991640640ac9b')
+md5sums=('d410b0bfd13ac08ff804f8f91e435b3e' 'fe47441f14e2b39c2fe473685f04395f')
+sha1sums=('228ea4ca3d5170825fc498b1b3879e437b430380' 'f98e3c35d365c7aa0e662ec61c2991640640ac9b')
 
 build() {
   cd "${srcdir}/${pkgname}_${pkgver}"
-
   DESTDIR="${pkgdir}" INIT_D=none MAN_D=/usr/share/man ./install.sh || return 1
   install -d "${pkgdir}/var/run/laptop-mode-tools/" || return 1
   install -D -m755 "${srcdir}/laptop-mode" "${pkgdir}/etc/rc.d/laptop-mode" || return 1
