--- a/pmount/trunk/PKGBUILD
+++ b/pmount/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=pmount
 pkgver=0.9.20
-pkgrel=2
+pkgrel=3
 pkgdesc="mount removable devices as normal user"
 arch=(i686 x86_64)
 license=('GPL2')
@@ -11,8 +11,9 @@ url="http://pmount.alioth.debian.org/"
 backup=('etc/pmount.allow')
 depends=('sysfsutils>=2.0.0-1' 'bash')
 optdepends=('hal: needed for pmount-hal')
-makedepends=('intltool')
+makedepends=('intltool' 'hal')
 source=(http://alioth.debian.org/frs/download.php/3127/${pkgname}-${pkgver}.tar.gz)
+md5sums=('237f069f5155f1c1e84b92c7d149fa9c')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
@@ -20,4 +21,3 @@ build() {
   make || return 1 
   make DESTDIR="${pkgdir}" install || return 1
 }
-md5sums=('237f069f5155f1c1e84b92c7d149fa9c')
